# test-covidapp

./: ChangeLog.md  README.md  test-covidapp.cabal
app/: Main.hs
data/html/: covid19-form.html  covid19-receipt.html
src/: Lib.hs
