cabal-version: 1.12

name:           test-covidapp
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/test-covidapp#readme>
homepage:       https://github.com/githubuser/test-covidapp#readme
bug-reports:    https://github.com/githubuser/test-covidapp/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2021 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
data-files:
    data/html/*.html

source-repository head
  type: git
  location: https://github.com/githubuser/test-covidapp

library
  exposed-modules:
      Lib
  other-modules:
      Paths_test_covidapp
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , containers
    , deriving-aeson
    , http-types
    , text
    , wai
  default-language: Haskell2010

executable test-covidapp-exe
  main-is: Main.hs
  other-modules:
      Paths_test_covidapp
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , test-covidapp
    , warp
  default-language: Haskell2010

test-suite test-covidapp-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_test_covidapp
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , test-covidapp
  default-language: Haskell2010
